# OpenCL_Compiler

./: .gitignore  CMakeLists.txt  README.md
CompilerLexer/: CMakeLists.txt
CompilerLexer/oldSrc/cppTestImpl/: Compiler.hpp
CompilerLexer/oldSrc/cppTestImpl/Compiler/: lexer.cpp  parser.cpp
CompilerLexer/src/: main.cpp
CompilerLexer/src/OpenCl_compiler/: lexer.hpp  lexerMap.hpp
CompilerLexer/src/helpers/: printTime.hpp
CompilerLexer/src/kernels/: lexer.cl  lexer_xilinx.cl
CompilerLexer/tests/: simpletest.tig
Data/: FRAC_Arm64CarmelData.csv  FRAC_GTX1050Data.csv  FRAC_I7-8750HData.csv  FRAC_QuadroK600Data.csv  FRAC_UHD630Data.csv  FRAC_XavierData.csv  FRAC_XeonE3-1245Data.csv  GenerateGraphs.py  GenerateGraphs_csv.py  Intel(R) Core(TM) i7-8750H CPU @ 2.20GHz.csv  Intel(R) OpenCL Map.csv  Intel(R) OpenCL.csv  Intel(R) UHD Graphics 630.csv  Intel(R) Xeon(R) CPU E3-1245 v3 @ 3.40GHz.csv  LexerTimings.xlsx  NVIDIA CUDA.csv  NVIDIA GeForce GTX 1050.csv  WorkGroups.xlsx  requirements.txt
MandelbrotFractal/: TestData.hpp
MandelbrotFractal/fractal/: mandelbrotTest.hpp
MandelbrotFractal/openCL/: context.cpp
MandelbrotFractal/png/: png.hpp
MandlebrotFractal/: CMakeLists.txt  Main.cpp
MandlebrotFractal/fractal/: mandelbrot.hpp
MandlebrotFractal/kernels/: mandelbrot.cl
MandlebrotFractal/openCL/: program.cpp
doc/: architectureLexer.puml  architectureMandelbrot.puml  mandelbrotActivity.puml  pipeline.puml
src/: CMakeLists.txt  Compiler.hpp  main.cpp
src/Compiler/: absyn.cpp  absyn.hpp  lexer.cpp  lexer.hpp  linter.cpp  linter.hpp  parser.hpp  tokens.cpp  tokens.hpp
src/OpenCl_compiler/: lexer.hpp  parser.hpp
src/helpers/: printTime.hpp
src/kernels/: lexer.cl  lexer_xilinx.cl  parser.cl
src/openCL/: context.hpp  program.hpp
tests/: simpletest.tig
